--- a/react-pint/src/index.css
+++ b/react-pint/src/index.css
@@ -1,68 +1,72 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    overflow-x: hidden;
+    font-family: "Roboto", sans-serif;
+    min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+html {
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
+:root {
+    color: #111111;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
+    --bg-color: #ffffff;
+    --bg-icon-hover: #e1e1e1;
+    --bg-theme: #151a49;
+    --bg-color-button: #ffffff;
+    --bg-color-button-hover: #e9e9e9;
+    --bg-color-button-active: #111111;
+    --bg-color-button-disabled: #e7e7e7;
+    --color-button-text: #111111;
+    --color-button-text-active: #e7e7e7;
+    --color-opt-card: #111;
+    --bg-color-opt-card: #fff;
+    --input-text-color: #242424;
+    --input-bg: #e7e7e7;
+    --input-bg-spec: #e9e9e9;
+    --input-border: #cccccc;
+    --bg-inp: #f1f1f1;
+    --email-color: #757575;
+}
+
+.dark-theme {
+    color: rgb(255, 255, 255);
+    background-color: #111111;
+
+    --bg-color: #111;
+    --bg-icon-hover: #1e1e1e;
+    --bg-theme: #81c0f3;
+    --bg-color-button: #111111;
+    --bg-color-button-hover: #2b2b2b;
+    --bg-color-button-active: #eeeeee;
+    --bg-color-button-disabled: #111111;
+    --color-button-text: #eeeeee;
+    --color-button-text-active: #111111;
+    --color-opt-card: #eee;
+    --bg-color-opt-card: #111;
+    --input-bg: #2e2e2e;
+    --input-bg-spec: #1a1a1a;
+    --input-border: #383838;
+    --input-text-color: #cecece;
+    --bg-inp: #424242;
 }
