--- a/react-pint/src/component/HeaderSign/styles.module.scss
+++ b/react-pint/src/component/HeaderSign/styles.module.scss
@@ -8,7 +8,6 @@
     padding: 17px 30px;
     height: 80px;
     width: 100%;
-
     .header-wrap {
         display: flex;
         align-items: center;
@@ -17,16 +16,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 250px;
             .logo {
-                margin-left: 20px;
                 display: flex;
-                justify-content: center;
                 align-items: center;
                 width: 40px;
                 height: 40px;
                 border-radius: 50%;
-
                 transition: 0.3s;
                 &:hover {
                     background-color: var(--bg-icon-hover);
@@ -35,7 +30,6 @@
                 & a {
                     display: flex;
                     align-items: center;
-
                     & p {
                         color: #e60023;
                         font-weight: bold;
@@ -63,13 +57,6 @@
                 color: var(--color-text);
                 font-size: 16px;
             }
-            &.faUser {
-                font-size: 24px;
-                margin-right: 5px;
-            }
-            &.faSignIn {
-                font-size: 24px;
-            }
         }
     }
 }
@@ -85,4 +72,33 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+}
+
+@media (max-width: 1100px) {
+    .header {
+        padding: 15px 30px;
+        height: 60px;
+        .header-wrap {
+            .set-pinter {
+                .logo {
+                    width: 30px;
+                    height: 30px;
+                }
+            }
+            .sign {
+                gap: 15px;
+                .login {
+                    margin-right: 10px;
+                    & a {
+                        color: var(--color-text);
+                        font-size: 16px;
+                    }
+                }
+                & a {
+                    color: var(--color-text);
+                    font-size: 16px;
+                }
+            }
+        }
+    }
 }
