--- a/react-pint/src/component/RegistrationForm/styles.module.scss
+++ b/react-pint/src/component/RegistrationForm/styles.module.scss
@@ -1,5 +1,5 @@
 .content-form-wrap {
-    width: 400px;
+    max-width: 400px;
     background-color: #fff;
     padding: 40px;
     border-radius: 30px;
@@ -25,5 +25,42 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+
+@media (max-width: 1100px) {
+    .content-form-wrap {
+        padding: 30px;
+        & h3 {
+            font-size: 20px;
+        }
+    }
+}
+
+@media (max-width: 796px) {
+    .content-form-wrap {
+        padding: 20px;
+        & h3 {
+            font-size: 14px;
+            margin-bottom: 7px;
+        }
+        & p {
+            font-size: 12px;
+            margin-bottom: 10px;
+        }
+    }
+}
+
+@media (max-width: 590px) {
+    .content-form-wrap {
+        padding: 20px;
+        & h3 {
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+        & p {
+            font-size: 14px;
+            margin-bottom: 15px;
+        }
     }
 }
