--- a/react-pint/src/pages/AddPost/styles.module.scss
+++ b/react-pint/src/pages/AddPost/styles.module.scss
@@ -1,5 +1,5 @@
 .add-post {
-    margin-top: 80px;
+    padding-top: 80px;
     min-height: 100vh;
 
     .container {
@@ -34,7 +34,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                width: 500px;
+                max-width: 500px;
                 height: 400px;
                 background-color: var(--input-bg);
                 border-radius: 10px;
@@ -70,6 +70,48 @@
                 display: flex;
                 flex-direction: column;
                 align-items: flex-end;
+            }
+        }
+    }
+}
+@media (max-width: 796px) {
+    .add-post {
+        padding-top: 30px;
+        padding: 30px;
+        min-height: 100vh;
+        .container {
+            max-width: 796px;
+            padding: 0;
+        }
+        .add-post-wrap {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .title-add-post-wrap {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 30px;
+                .title-add-post {
+                    font-size: 28px;
+                }
+            }
+            .add-post-form {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 30px;
+                gap: 40px;
+                .add-post-img {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    max-width: 400px;
+                    height: 200px;
+                    background-color: var(--input-bg);
+                    border-radius: 10px;
+                    overflow: hidden;
+                }
             }
         }
     }
