--- a/react-pint/src/pages/PostImagePage/styles.module.scss
+++ b/react-pint/src/pages/PostImagePage/styles.module.scss
@@ -17,3 +17,38 @@
     height: 100%;
     position: relative;
 }
+
+@media (max-width: 1100px) {
+    .main {
+        margin: 0 30px;
+        margin-top: 0;
+        padding-top: 80px;
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: 0;
+    }
+    .main-wrap {
+        column-count: 5;
+    }
+}
+@media (max-width: 796px) {
+    .main {
+        margin: 0 30px;
+        margin-top: 0;
+        padding-top: 30px;
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: 0;
+    }
+    .main-wrap {
+        column-count: 3;
+    }
+}
+
+@media (max-width: 590px) {
+    .main-wrap {
+        column-count: 2;
+    }
+}
