--- a/react-pint/src/pages/UserProfilePage/styles.module.scss
+++ b/react-pint/src/pages/UserProfilePage/styles.module.scss
@@ -2,7 +2,9 @@
     margin-top: 80px;
     min-height: 100vh;
 }
-
+.theme {
+    display: none;
+}
 .user-profile-wrap {
     margin: 0 100px;
 }
@@ -78,6 +80,7 @@
         border: 1px solid transparent;
         border-radius: 30px;
         transition: 0.3s;
+        color: #727272;
         &:hover {
             background: var(--bg-color-button-hover);
             border: 1px solid transparent;
@@ -89,7 +92,7 @@
             background-color: #e60023;
             font-size: 14px;
             font-weight: 600;
-            color: var(--color-button-text-active);
+            color: #fff;
             text-align: center;
         }
     }
@@ -99,14 +102,39 @@
     }
 }
 .createdCardsList {
-    column-count: 6;
+    column-count: 4;
     width: 100%;
     height: 100%;
     position: relative;
 }
 .savedCardsList {
-    column-count: 6;
+    column-count: 4;
     width: 100%;
     height: 100%;
     position: relative;
+}
+@media (max-width: 1100px) {
+    .user-profile-wrap {
+        margin: 0 30px;
+    }
+}
+@media (max-width: 796px) {
+    .theme {
+        display: flex;
+    }
+    .user-profile {
+        margin-top: 0;
+        padding-top: 30px;
+        min-height: 100vh;
+    }
+
+    .user-profile-wrap {
+        margin: 0 30px;
+    }
+    .createdCardsList {
+        column-count: 2;
+    }
+    .savedCardsList {
+        column-count: 2;
+    }
 }
